# CUDAGPTCPP

./: .gitignore  CMakeLists.txt
include/autograd/: node.hpp
include/loss/: loss.hpp
include/nn/: module.hpp  optimizer.hpp
include/tensor/: tensor.hpp
src/: main.cpp
src/autograd/: node.cpp  node.cu
src/nn/: module.cu
src/tensor/: tensor.cu
